test-suite/tests/roundtrip/invalid/semantic/typecheck/bool_as_index/01/input.essence
find m: matrix indexed by [int(1..3)] of int(1..5)
find b: bool
such that m[b] = 5
such that m[b,2] = [5, 4]